--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"@testing-library/user-event": "^13.5.0",
 		"autoprefixer": "10.4.5",
 		"bootstrap": "^5.1.3",
+		"config": "file:./public/config",
 		"react": "^18.1.0",
+		"react-app-rewired": "^2.2.1",
 		"react-bootstrap": "^2.4.0",
 		"react-dom": "^18.1.0",
 		"react-icons": "^4.3.1",
@@ -21,12 +23,15 @@
 		"react-scripts": "^5.0.1",
 		"reactstrap": "^9.0.2",
 		"remixicon": "^2.5.0",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"web3": "^1.7.3",
+		"web3-eth-contract": "^1.7.3",
+		"webpack": "^5.0.0-rc.6"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"test": "react-app-rewired test",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
@@ -46,5 +51,16 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"assert": "^2.0.0",
+		"buffer": "^6.0.3",
+		"crypto-browserify": "^3.12.0",
+		"https-browserify": "^1.0.0",
+		"os-browserify": "^0.3.0",
+		"process": "^0.11.10",
+		"stream-browserify": "^3.0.0",
+		"stream-http": "^3.2.0",
+		"url": "^0.11.0"
 	}
 }
