--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-icons": "^4.3.1",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^5.0.1",
+		"react-toastify": "^9.0.3",
 		"reactstrap": "^9.0.2",
 		"remixicon": "^2.5.0",
 		"web-vitals": "^2.1.4",
