--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-app-rewired": "^2.2.1",
 		"react-bootstrap": "^2.4.0",
 		"react-dom": "^18.1.0",
+		"react-hook-form": "^7.32.2",
 		"react-icons": "^4.3.1",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^5.0.1",
