--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-toastify": "^9.0.3",
 		"reactstrap": "^9.0.2",
 		"remixicon": "^2.5.0",
+		"stream": "0.0.2",
 		"styled-components": "^5.3.5",
 		"web-vitals": "^2.1.4",
 		"web3": "^1.7.3",
