Improved overall code

--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,6 +1,7 @@
 {
     "CONTRACT_ADDRESS": "0xA25AeE3E0FaC59Be70b090B44be97BAA97121E65",
     "STAKING_CONTRACT": "0x04191C5EeF2C6bd02CFcedAF88312a9Bd359E09a",
+    "RENTAL_CONTRACT": "0xB73F060bAdB795d211cf5d899DC0d1f57791ACca",
     "NETWORK": {
       "NAME": "Rinkeby Test Network",
       "SYMBOL": "ETH",
