--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
 		"test": "react-app-rewired test",
 		"eject": "react-scripts eject"
 	},
+	"overrides": {
+		"autoprefixer": "10.4.5"
+	  },
 	"eslintConfig": {
 		"extends": [
 			"react-app",
