Leasing func added

--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,7 +1,7 @@
 {
-    "CONTRACT_ADDRESS": "0xA25AeE3E0FaC59Be70b090B44be97BAA97121E65",
-    "STAKING_CONTRACT": "0x04191C5EeF2C6bd02CFcedAF88312a9Bd359E09a",
-    "RENTAL_CONTRACT": "0xB73F060bAdB795d211cf5d899DC0d1f57791ACca",
+    "CONTRACT_ADDRESS": "0xE4025bFCae17011a93821C75944fa86e5767ABB1",
+    "STAKING_CONTRACT": "0x4C1a14b01B123929EB1cf9b9c3AAeD836d97dD7e",
+    "RENTAL_CONTRACT": "0xfA02E71b68B13430e9e3ecCB68434AC2459f65fe",
     "NETWORK": {
       "NAME": "Rinkeby Test Network",
       "SYMBOL": "ETH",
@@ -10,5 +10,8 @@
     "NFT_NAME": "ScratchNFT",
     "SYMBOL": "SNT",
     "WEI_COST": 200000000000000000,
-    "GAS_LIMIT":300000
+    "WEI_COST2":100000000000000000,
+    "GAS_LIMIT":300000,
+    "PREMIUM_NFT_PRICE":260000000000000000,
+    "REGULAR_NFT_PRICE":130000000000000000
     }
