fixed reloading issues

--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,7 +1,7 @@
 {
-    "CONTRACT_ADDRESS": "0xE4025bFCae17011a93821C75944fa86e5767ABB1",
-    "STAKING_CONTRACT": "0x4C1a14b01B123929EB1cf9b9c3AAeD836d97dD7e",
-    "RENTAL_CONTRACT": "0xfA02E71b68B13430e9e3ecCB68434AC2459f65fe",
+    "CONTRACT_ADDRESS": "0x3eE2AB400475A4C22202813943d699D018873376",
+    "STAKING_CONTRACT": "0xD429A543B4D8AF686F4f5b177cc9a7dbC2F2Af3F",
+    "RENTAL_CONTRACT": "0xF7b32F5815B2c1Bc809609604416c335a46B2457",
     "NETWORK": {
       "NAME": "Rinkeby Test Network",
       "SYMBOL": "ETH",
@@ -11,7 +11,7 @@
     "SYMBOL": "SNT",
     "WEI_COST": 200000000000000000,
     "WEI_COST2":100000000000000000,
-    "GAS_LIMIT":300000,
     "PREMIUM_NFT_PRICE":260000000000000000,
-    "REGULAR_NFT_PRICE":130000000000000000
+    "REGULAR_NFT_PRICE":130000000000000000,
+    "GAS_LIMIT":300000
     }
